--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,7 @@ cache: bundler
 rvm:
   - 2.4.3
 before_install: gem install bundler -v 1.17.1
+
+env:
+  global:
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # prevents nokogiri from downloading slooooow librarie
