--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ rvm:
   - 2.4.3
 before_install: gem install bundler -v 1.17.1
 
+install: bundle install --jobs=3 --retry=3
+
 env:
   global:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # prevents nokogiri from downloading slooooow librarie
